--- a/layout/src/style/index.less
+++ b/layout/src/style/index.less
@@ -12,7 +12,7 @@ img {
 }
 
 body {
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
 }
 
 ::-webkit-scrollbar {
@@ -125,6 +125,7 @@ body {
 
 .el-loading-mask {
     background-color: rgba(0, 0, 0, 0.09);
+    pointer-events  : none;
 }
 
 .el-badge__content {
