upd: 优化查看原图后，下载壁纸直接保存现有原图数据

--- a/layout/src/style/index.less
+++ b/layout/src/style/index.less
@@ -124,8 +124,8 @@ body {
 }
 
 .el-loading-mask {
-    background-color: rgba(0, 0, 0, 0.09);
-    pointer-events  : none;
+    background-color: rgba(0, 0, 0, 0.1);
+   /*  pointer-events  : none; */
 }
 
 .el-badge__content {
