--- a/layout/src/style/index.less
+++ b/layout/src/style/index.less
@@ -124,8 +124,8 @@ body {
 }
 
 .el-loading-mask {
-    background-color: rgba(0, 0, 0, 0.1);
-   /*  pointer-events  : none; */
+    background-color    : rgba(0, 0, 0, 0.1);
+    /*  pointer-events  : none; */
 }
 
 .el-badge__content {
@@ -138,4 +138,8 @@ body {
 
 .mgr10 {
     margin-right: 10px;
+}
+
+.el-progress-bar__inner {
+    transition: width .1s ease;
 }
