--- a/layout/style/variables.less
+++ b/layout/style/variables.less
@@ -6,8 +6,22 @@
     --primary: @primary;
 
     // 按钮
-    --button-hover-font-color: @primary;
-    --button-border-color    : @primary;
+    --button-bg-color    : #40a8fe;
+    --button-font-color  : #ffffff;
+    --button-border-color: #40a8fe;
+
+    --button-hover-bg-color    : #85bfee;
+    --button-hover-font-color  : #ffffff;
+    --button-hover-border-color: #85bfee;
+
+    --button-plain-bg-color    : #ffffff;
+    --button-plain-font-color  : #40a8fe;
+    --button-plain-border-color: #40a8fe;
+
+    --button-plain-hover-bg-color    : #6abcff;
+    --button-plain-hover-font-color  : #ffffff;
+    --button-plain-hover-border-color: #6abcff;
+
 
     // 边框色
     --border-color: #696969;
@@ -17,9 +31,10 @@
     --head-font-color: #161616;
 
     // 主背景
-    --bg-color   : #ffffff;
-    --font-color : #2c2e35;
-    --font-color2: #9fafbc;
+    --bg-color        : #ffffff;
+    --font-color      : #2c2e35;
+    --hover-font-color: #40a8fe;
+    --font-color2     : #9fafbc;
 
     // 弹窗背景
     --dialog-bg-color  : #ffffff;
@@ -59,14 +74,32 @@
     &.dark {
         --border-color: #ffffff;
 
+        // 按钮
+        --button-bg-color    : #163758;
+        --button-font-color  : #ffffff;
+        --button-border-color: #163758;
+
+        --button-hover-bg-color    : #5c8aaf;
+        --button-hover-font-color  : #ffffff;
+        --button-hover-border-color: #5c8aaf;
+
+        --button-plain-bg-color    : #355a79;
+        --button-plain-font-color  : #56aff9;
+        --button-plain-border-color: #56aff9;
+
+        --button-plain-hover-bg-color    : #56aff9;
+        --button-plain-hover-font-color  : #fff;
+        --button-plain-hover-border-color: #56aff9;
+
         // 标题栏
         --head-bg-color  : #111420e1;
         --head-font-color: #e4e4e4;
 
         // 主背景    
-        --bg-color   : #191d30;
-        --font-color : #ffffff;
-        --font-color2: #f0f0f0;
+        --bg-color        : #191d30;
+        --font-color      : #ffffff;
+        --hover-font-color: #3da5ef;
+        --font-color2     : #f0f0f0;
 
         // 弹窗背景
         --dialog-bg-color  : #3b3f5f;
